Added Main Tab Bar Navigation

--- a/Bankey/Bankey/Utils/en.lproj/Localizable.strings
+++ b/Bankey/Bankey/Utils/en.lproj/Localizable.strings
@@ -24,3 +24,7 @@
 "button.previous" = "Previous";
 "button.next" = "Next";
 "button.logout" = "Logout";
+
+"tabbar.summary" = "Summary";
+"tabbar.move" = "Move Money";
+"tabbar.more" = "More";
