--- a/Bankey/Bankey/Utils/tr.lproj/Localizable.strings
+++ b/Bankey/Bankey/Utils/tr.lproj/Localizable.strings
@@ -15,6 +15,16 @@
 "login.error.empty.password" = "Şifre boş olamaz";
 "login.error.empty.username.and.password" = "Kullanıcı adı ve şifre boş olamaz";
 "login.error.incorrect.username.or.password" = "Yanlış kullanıcı adı veya şifre";
+
 "onboarding.first.description" = "Bankey daha hızlı, kullanımı daha kolay ve kendinizi 1989'daymış gibi hissetmenizi sağlayacak yepyeni bir görünüme ve hisse sahip.";
 "onboarding.second.description" = "Paranızı dünyanın her yerine hızlı ve güvenli bir şekilde taşıyın.";
 "onboarding.third.description" = "Daha fazla bilgiyi www.bankey.com adresinde bulabilirsiniz.";
+
+"button.close" = "Kapat";
+"button.previous" = "Önceki";
+"button.next" = "Sonraki";
+"button.logout" = "Çıkış yap";
+
+"tabbar.summary" = "Özet";
+"tabbar.move" = "Para Taşı";
+"tabbar.more" = "Daha";
